[package]
name = "stb_rect_pack_sys"
version = "0.1.3"
edition = "2021"
authors = ["Torkel Danielsson <torkel@voysys.se>, Niclas Olmenius <niclas@voysys.se>"]
license = "MIT OR Apache-2.0"
description = "Low level bindgen generated wrapper for stb_rect_pack"
repository = "https://github.com/voysys/stb-rect-pack-sys"
documentation = "https://docs.rs/stb_rect_pack_sys"
keywords = ["stb_rect_pack", "rect", "pack"]
readme = "README.md"

[build-dependencies]
cc = "1"
bindgen = { version = "0.61", default_features = false }
